--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section id="cv" class="card tab-content">
       <h2>Curriculum Vitae</h2>
       <p>Click below to download the full PDF version of my CV.</p>
-      <p><a href="resume.pdf" target="_blank">Download Resume (PDF)</a></p>
+      <p><a href="resume.pdf" download="Allison_Xin_Resume.pdf">Download Resume (PDF)</a></p>
     </section>
   </main>
 
