--- a/index.html
+++ b/index.html
@@ -69,13 +69,6 @@
     .project {
       margin-bottom: 2rem;
     }
-    .project img {
-      width: 100%;
-      border-radius: 12px;
-      margin-bottom: 1rem;
-      object-fit: cover;
-      max-height: 250px;
-    }
     .project h3 {
       margin: 0.5rem 0;
     }
@@ -125,29 +118,29 @@
       <h2>Projects & Research</h2>
 
       <div class="project">
-        <img src="images/amber_lab.jpg" alt="Amber Lab Project">
+        <h3>Detecting Collusion in Multi-Agent Games</h3>
+        <p>Simulated multiplayer games with colluding and honest agents using no-regret learning algorithms. Built a detection pipeline with XGBoost to identify colluders in real time using features from payoff and behavior deviations. Ongoing work focuses on auction environments and adversarial robustness.</p>
+      </div>
+
+      <div class="project">
         <h3>Amber Lab: NLP Interfaces for Exoskeletons</h3>
         <p>Developing LLM-based user interfaces for lower-body exoskeletons at Caltech Amber Lab. Research focuses on interaction personalization and adaptive control (advised by Prof. Yisong Yue, Amy Li).</p>
       </div>
 
       <div class="project">
-        <img src="images/social_science_lab.jpg" alt="Electoral Modeling">
         <h3>Bayesian Models of Electoral Behavior</h3>
         <p>Built an R package and generative model for simulating and analyzing congressional elections under uncertainty. Preparing library for publication (Profs. Katz & King).</p>
       </div>
 
       <div class="project">
-        <img src="images/hacktech.jpg" alt="Hacktech App">
         <h3>Healthcare Cost Prediction (Hacktech Finalist)</h3>
         <p>Created a Streamlit app using XGBoost and CatBoost to predict insurance charges and generate model-informed counterfactuals. Visualized uncertainty in cost drivers.</p>
       </div>
 
       <div class="project">
-        <img src="images/neuro_lab.jpg" alt="CU Boulder Lab">
         <h3>CU Boulder Neuro Lab: Decision Modeling</h3>
         <p>Modeled Bayesian decision processes and compared performance against human data from Jones & Sieck (2003). Implemented in Java and visualized results.</p>
       </div>
-
     </section>
 
     <!-- CV -->
