--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
   <header>
     <h1>Allison Xin</h1>
-    <p>Caltech undergraduate | CS + Economics | Machine Learning + Social Science</p>
+    <p>Caltech undergraduate | CS + Economics | Machine Learning</p>
     <nav>
       <a onclick="showTab('home')">Home</a>
       <a onclick="showTab('projects')">Projects</a>
