--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="contact-info">
         <p>Email: <a href="mailto:axin@caltech.edu">axin@caltech.edu</a></p>
         <p>GitHub: <a href="https://github.com/alliixx" target="_blank">github.com/alliixx</a></p>
-        <p><a href="Resume___Allison_Xin.pdf" download="Resume___Allison_Xin">Download Resume (PDF)</a></p>
+        <p>Resume: <a href="Resume___Allison_Xin.pdf" download="Resume___Allison_Xin.pdf">Download Resume (PDF)</a></p>
       </div>
     </section>
 
@@ -147,7 +147,7 @@
     <section id="cv" class="card tab-content">
       <h2>Curriculum Vitae</h2>
       <p>Click below to download the full PDF version of my CV.</p>
-      <p><a href="Resume___Allison_Xin.pdf" download="Resume___Allison_Xin">Download Resume (PDF)</a></p>
+      <p><a href="Resume___Allison_Xin.pdf" download="Resume___Allison_Xin.pdf">Download Resume (PDF)</a></p>
     </section>
   </main>
 
